Move imagd ID to URL path
